@@ -85,6 +85,7 @@ prime_intergalactic_delivery-shop_infrastructure_block_crafting=Block infrastruc
 prime_intergalactic_delivery-biter_extermination_item_cost=Biter Extermination capsule coin cost
 prime_intergalactic_delivery-muppet_streamer_recruit_team_member_software_start_cost=Recruit team member starting cost
 prime_intergalactic_delivery-muppet_streamer_recruit_team_member_software_cost_level_multiplier=Recruit team member level cost multiplier
+prime_intergalactic_delivery-shop_player_whitelist=Player shop whitelist
 
 [mod-setting-description]
 prime_intergalactic_delivery-shop_personal_equipment_cost_multiplier=Increases/decrease the cost of personal equipment in the shop. Set to 0 to disable the purchasing of these items.
@@ -106,10 +107,12 @@ prime_intergalactic_delivery-shop_infrastructure_block_crafting=Block the infras
 prime_intergalactic_delivery-biter_extermination_item_cost=The coin cost for the Biter Extermination capsule. If set to 0 then the item will not be available in the shop.
 prime_intergalactic_delivery-muppet_streamer_recruit_team_member_software_start_cost=The starting cost for the first level of the recruit team member upgrades. Set to 0 to not have the item in the market. If item in shop is enabled make sure to disable the research by setting its own mod option to 0.
 prime_intergalactic_delivery-muppet_streamer_recruit_team_member_software_cost_level_multiplier=The price increase for each new level of the recruit team member upgrade from the last.
+prime_intergalactic_delivery-shop_player_whitelist=A comma seperated list of the players who can use the shop. Leave blank for all players.
 
 [rendering-text]
 prime_intergalactic_delivery-player_in_shop_gui=Hunting for bargins!
 prime_intergalactic_delivery-shop_gui_in_use=Shopping terminal in use, please form an orderly queue
+prime_intergalactic_delivery-player_not_on_whitelist=You are not on the whitelist to use the shop
 
 [message]
 prime_intergalactic_delivery-order_delivered=Order number __1__ to your collection point please
